vite options fixed

--- a/src/index.html
+++ b/src/index.html
@@ -10,28 +10,28 @@
     <main role="main">
       <ul>
         <li class="link">
-          <a href="./src/pages/login/login.html">Войти</a>
+          <a href="./pages/login/login.html">Войти</a>
         </li>
         <li class="link">
-          <a href="./src/pages/auth/auth.html">Авторизоваться</a>
+          <a href="./pages/auth/auth.html">Авторизоваться</a>
         </li>
         <li class="link">
-          <a href="./src/pages/chat/chat.html">Чат</a>
+          <a href="./pages/chat/chat.html">Чат</a>
         </li>
         <li class="link">
-          <a href="./src/pages/404Error/404Error.html">404</a>
+          <a href="./pages/404Error/404Error.html">404</a>
         </li>
         <li class="link">
-          <a href="./src/pages/5Error/5Error.html">500</a>
+          <a href="./pages/5Error/5Error.html">500</a>
         </li>
         <li class="link">
-          <a href="./src/pages/profile/profile.html">Profile</a>
+          <a href="./pages/profile/profile.html">Profile</a>
         </li>
         <li class="link">
-          <a href="./src/pages/editProfile/editProfile.html">Edit Profile</a>
+          <a href="./pages/editProfile/editProfile.html">Edit Profile</a>
         </li>
         <li class="link">
-          <a href="./src/pages/editPassword/editPassword.html">Edit Password</a>
+          <a href="./pages/editPassword/editPassword.html">Edit Password</a>
         </li>
       </ul>
     </main>
