--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -23,10 +23,10 @@
                 {{/ message/message}}
             </div>
             <div class="chat__footer">
-                <img class="attachButton" src="/attach.svg" width="30" height="30" alt="attach">
+                <img class="attachButton" src="/image/attach.svg" width="30" height="30" alt="attach">
                 {{#> inputChat/inputChat type="text" text="Введите сообщение" name="message"}}
                 {{/ inputChat/inputChat}}
-                <img class="sendButton" src="/sendButton.svg" width="30" height="30" alt="send">
+                <img class="sendButton" src="/image/sendButton.svg" width="30" height="30" alt="send">
             </div>
         </div>
     </div>
