--- a/src/pages/editPassword/editPassword.html
+++ b/src/pages/editPassword/editPassword.html
@@ -28,7 +28,7 @@
             />
         </form>
 
-        <img class="backButton" src="/backButton.svg" alt="back">
+        <img class="backButton" src="/image/backButton.svg" alt="back">
         {{> button/button classes="button__solid" text="Сохранить" }}
     </div>
 {{/ layouts/page}}
