--- a/src/pages/editProfile/editProfile.html
+++ b/src/pages/editProfile/editProfile.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="profile__footer">
-            <img class="backButton" src="/backButton.svg" alt="back">
+            <img class="backButton" src="/image/backButton.svg" alt="back">
             {{#> button/button classes="button__solid saveButton" text="Сохранить"}} {{/ button/button}}
         </div>
     </div>
