--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -10,7 +10,7 @@
         <div class="profile__footer">
             <ul>
                 <li class="link">
-                    <img src="/backButton.svg" alt="back">
+                    <img src="/image/backButton.svg" alt="back">
                 </li>
                 <li class="link">
                     <a href="">Изменить данные</a>
