inputs rollup added

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
           <a href="./pages/login/login.html">Войти</a>
         </li>
         <li class="link">
-          <a href="./pages/auth/auth.html">Авторизоваться</a>
+          <a href="./pages/register/register.html">Авторизоваться</a>
         </li>
         <li class="link">
           <a href="./pages/chat/chat.html">Чат</a>
