--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,5 +1,5 @@
 {{#> layouts/page title="Login Page"}}
-    <div class="auth-page">
+    <div class="register-page">
       {{#card}}
         {{> input/input type="email" text="Email" name="email"}}
         {{> input/input type="text" text="Логин" name="login"}}
