--- a/src/pages/editPassword/editPassword.html
+++ b/src/pages/editPassword/editPassword.html
@@ -26,9 +26,9 @@
                 placeholder="Подтвердите пароль" 
                 value=""
             />
+            {{> button/button classes="button__solid" text="Сохранить" type="submit"}}
         </form>
-
         <img class="backButton" src="/image/backButton.svg" alt="back">
-        {{> button/button classes="button__solid" text="Сохранить" }}
+
     </div>
 {{/ layouts/page}}
