--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -8,32 +8,34 @@
   </head>
   <body>
     <main role="main">
-      <ul>
-        <li class="link">
-          <a href="./pages/login/login.html">Войти</a>
-        </li>
-        <li class="link">
-          <a href="./pages/register/register.html">Авторизоваться</a>
-        </li>
-        <li class="link">
-          <a href="./pages/chat/chat.html">Чат</a>
-        </li>
-        <li class="link">
-          <a href="./pages/404Error/404Error.html">404</a>
-        </li>
-        <li class="link">
-          <a href="./pages/5Error/5Error.html">500</a>
-        </li>
-        <li class="link">
-          <a href="./pages/profile/profile.html">Profile</a>
-        </li>
-        <li class="link">
-          <a href="./pages/editProfile/editProfile.html">Edit Profile</a>
-        </li>
-        <li class="link">
-          <a href="./pages/editPassword/editPassword.html">Edit Password</a>
-        </li>
-      </ul>
+      <nav class="menu">
+        <ul>
+          <li class="link">
+            <a href="./pages/login/login.html">Войти</a>
+          </li>
+          <li class="link">
+            <a href="./pages/register/register.html">Авторизоваться</a>
+          </li>
+          <li class="link">
+            <a href="./pages/chat/chat.html">Чат</a>
+          </li>
+          <li class="link">
+            <a href="./pages/404Error/404Error.html">404</a>
+          </li>
+          <li class="link">
+            <a href="./pages/5Error/5Error.html">500</a>
+          </li>
+          <li class="link">
+            <a href="./pages/profile/profile.html">Profile</a>
+          </li>
+          <li class="link">
+            <a href="./pages/editProfile/editProfile.html">Edit Profile</a>
+          </li>
+          <li class="link">
+            <a href="./pages/editPassword/editPassword.html">Edit Password</a>
+          </li>
+        </ul>
+      </nav>
     </main>
     <script type="module" src="./index.ts"></script>
   </body>
