--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,13 @@
             <a href="./pages/5Error/5Error.html">500</a>
           </li>
           <li class="link">
-            <a href="./pages/profile/profile.html">Profile</a>
+            <a href="./pages/profile/profile.html">Профиль</a>
           </li>
           <li class="link">
-            <a href="./pages/editProfile/editProfile.html">Edit Profile</a>
+            <a href="./pages/editProfile/editProfile.html">Изменить профиль</a>
           </li>
           <li class="link">
-            <a href="./pages/editPassword/editPassword.html">Edit Password</a>
+            <a href="./pages/editPassword/editPassword.html">Изменить пароль</a>
           </li>
         </ul>
       </nav>
