--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -24,7 +24,7 @@
             </div>
             <div class="chat__footer">
                 <img class="attachButton" src="/image/attach.svg" width="30" height="30" alt="attach">
-                {{#> inputChat/inputChat type="text" text="Введите сообщение" name="message"}}
+                {{#> inputChat/inputChat type="text" text="Введите сообщение" name="message" id="message"}}
                 {{/ inputChat/inputChat}}
                 <img class="sendButton" src="/image/sendButton.svg" width="30" height="30" alt="send">
             </div>
