--- a/src/pages/editPassword/editPassword.html
+++ b/src/pages/editPassword/editPassword.html
@@ -10,6 +10,7 @@
                 placeholder="Старый пароль" 
                 value=""
                 name="oldPassword"
+                id="oldPassword"
             />
 
             <input
@@ -18,6 +19,7 @@
                 placeholder="Новый пароль" 
                 value=""
                 name="newPassword"
+                id="newPassword"
             />
 
             <input
@@ -25,6 +27,9 @@
                 type="password" 
                 placeholder="Подтвердите пароль" 
                 value=""
+                name="newPasswordAgain"
+                id="newPasswordAgain"
+
             />
             {{> button/button classes="button__solid" text="Сохранить" type="submit"}}
         </form>
