--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -2,8 +2,8 @@
     <div class="login-page">
       {{#card}}
         <form class="login__form">
-          {{> input/input type="email" text="Email" }}
-          {{> input/input type="password" text="Пароль" }}
+          {{> input/input type="email" text="Email" name = "email" id="email"}}
+          {{> input/input type="password" text="Пароль" name="password" id="password"}}
           {{> button/button classes="button__solid" text="Авторизоваться" type="submit"}}
         </form>
         {{> button/button classes="button__outline" text="Нет аккаунта" }}
