--- a/src/pages/404Error/404Error.html
+++ b/src/pages/404Error/404Error.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
-      <script src="./404Error.ts" type="module"></script>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="/styles.scss" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>404 Error</title>
+    <script src="./404Error.ts" type="module"></script>
   </head>
   <body> 
       <main role="main" id="main"></main>
