--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
+      <meta charset="UTF-8" />
+      <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+      <link rel="stylesheet" href="/styles.scss" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Login</title>
       <script src="./login.ts" type="module"></script>
   </head>
   <body> 
