--- a/src/index.html
+++ b/src/index.html
@@ -12,28 +12,28 @@
       <nav class="app__menu">
         <ul>
           <li class="link">
-            <a href="./pages/login/login.html">Войти</a>
+            <a href="/src/pages/login/login.html">Войти</a>
           </li>
           <li class="link">
-            <a href="./pages/register/register.html">Авторизоваться</a>
+            <a href="/src/pages/register/register.html">Авторизоваться</a>
           </li>
           <li class="link">
-            <a href="./pages/chat/chat.html">Чат</a>
+            <a href="/src/pages/chat/chat.html">Чат</a>
           </li>
           <li class="link">
-            <a href="./pages/404Error/404Error.html">404</a>
+            <a href="/src/pages/404Error/404Error.html">404</a>
           </li>
           <li class="link">
-            <a href="./pages/5Error/5Error.html">500</a>
+            <a href="/src/pages/5Error/5Error.html">500</a>
           </li>
           <li class="link">
-            <a href="./pages/profile/profile.html">Профиль</a>
+            <a href="/src/pages/profile/profile.html">Профиль</a>
           </li>
           <li class="link">
-            <a href="./pages/editProfile/editProfile.html">Изменить профиль</a>
+            <a href="/src/pages/editProfile/editProfile.html">Изменить профиль</a>
           </li>
           <li class="link">
-            <a href="./pages/editPassword/editPassword.html">Изменить пароль</a>
+            <a href="/src/pages/editPassword/editPassword.html">Изменить пароль</a>
           </li>
         </ul>
       </nav>
